@@ -268,8 +268,7 @@ a.page-numbers.prev,
 	border-bottom: none;
 	color: white;
 	text-decoration: none;
-	text-transform: uppercase;
-}
+	}
 
 .more-link svg,
 .search-submit svg,
