@@ -280,3 +280,5 @@ jgs //    /
                   - parent category included children, but we do not need
                   - space after current page
                   - fix headings (not h4, but h3)
+22 Mar, 2019   'empty category not listed in sitemap'
+                  -if a category is empty, do not display in sitemap. 
